# BrowserPilot

./: .dockerignore  .env.test  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.docker.md  README.md  ROADMAP.md  demo_bulk.py  docker-compose.full.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  realistic_profiles.json  requirements.txt
.github/: copilot-instructions.md  pull_request_template.md
backend/: agent.py  anti_bot_detection.py  benchmark.py  browser_controller.py  bulk_engine.py  cdp_streamer.py  config.py  fingerprint_profile.py  human_behavior.py  main.py  proxy_manager.py  smart_browser_controller.py  (+4 more)
generative-ui/backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
generative-ui/backend/app/: main.py  models.py
generative-ui/backend/app/api/routes/: entity_matcher.py  generate.py  refine.py  scrape.py
generative-ui/backend/app/models/: __init__.py  data_model.py  ui_spec.py
generative-ui/backend/app/services/: component_templates.py  firecrawl_service.py  geocoding.py  intent_classifier.py  interpreter.py  pipeline.py  prompts.py  schema_merger.py  scraper.py  storage.py  ui_generator.py
generative-ui/backend/data/models/: compare_job_offers_from_google,_stripe,_and_a_star.json  compare_paris,_rome,_and_barcelona_as_vacation_des.json  compare_paris,_rome,_and_barcelona_for_a_7-day_vac.json  compare_three_job_offers_from_google,_stripe,_and_.json  compare_three_tech_job_offers_and_determine_the_be.json  compare_tokyo,_barcelona,_and_bali_as_destinations.json  compare_tokyo,_barcelona,_and_bali_for_a_multi-cit.json  compare_tokyo,_barcelona,_and_bali_for_multi-city_.json  compare_total_cost_of_ownership_for_tesla_model_3,.json  compare_travel_destinations_(tokyo,_barcelona,_bal.json  compare_wedding_venues_in_san_francisco_for_150_gu.json  plan_a_21-day_multi-city_trip_to_tokyo,_paris,_and.json  plan_and_manage_relocation_to_san_francisco,_inclu.json  plan_and_manage_relocation_to_san_francisco_includ.json  plan_and_organize_a_trip_to_japan_including_itiner.json
generative-ui/backend/tests/: test_auth.py  test_render_from_data.py  test_render_from_scrape.py
(+157 files in other folders)
