[project]
name = "browserpilot"
version = "1.0.0"
description = "AI-powered browser agent with stealth scraping capabilities"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
# Where pytest looks for tests
testpaths = ["tests"]

# Only files matching this pattern are treated as test files
python_files = ["test_*.py"]

# Only functions matching this pattern are treated as tests
python_functions = ["test_*"]

# Show extra info when running: -v = verbose, -s = show print statements
addopts = "-v -s"

# Enable async test support (so we can test async functions)
asyncio_mode = "auto"

# Ignore these directories when searching for tests
norecursedirs = ["frontend", "node_modules", ".git"]
