[tool.poetry]
name = "generative-ui-backend"
version = "0.1.0"
description = "FastAPI backend for generative-ui-browser"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.104.1", python = ">=3.8"}
uvicorn = {extras = ["standard"], version = "^0.24.0", python = ">=3.8"}
pydantic = {version = "^2.5.0", python = ">=3.8"}
python-multipart = {version = "^0.0.6", python = ">=3.7"}
anthropic = {version = "^0.5.0", python = ">=3.8"}
openai = {version = "^1.0.0", python = ">=3.8"}
google-generativeai = {version = "^0.8.0", python = ">=3.9"}
beautifulsoup4 = {version = "^4.12.0", python = ">=3.8"}
playwright = {version = "^1.40.0", python = ">=3.8"}
trafilatura = {version = "^1.6.0", python = ">=3.8"}
aiohttp = {version = "^3.9.0", python = ">=3.8"}
slowapi = {version = "^0.1.9", python = ">=3.8"}
websockets = {version = "^12.0", python = ">=3.8"}
python-dotenv = "^1.0.0"
[tool.poetry.group.dev.dependencies]
pytest = {version = "^7.4.3", python = ">=3.8"}
httpx = {version = "^0.25.2", python = ">=3.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
